--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,50 @@
-
+body {
+    background-color: rgb(6, 2, 22);
+}
 
 .card {
-    width: 100;
-    height: 200;
+    width: 80px;
+    height: 80px;
     background-color: green;
     color: white;
+    border: solid white 2px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.faceDown {
+    background-color: black;
+}
+
+.specialButton {
+    background-color: red;
+}
+
+.scaleDown {
+    scale: .5
+}
+
+
+#player1 {
+    margin: auto;
+    width: 90%;
+    height: 40vh;
+    border: solid blue 2px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+#player2 {
+
+    margin: auto;
+    width: 90%;
+    height: 40vh;
+    border: solid red 2px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    margin-top: 100px;
 }
